Set-up for Stackviewer