@@ -38,7 +38,51 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>ingest</id>
+            <id>ubuntu</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>${native-maven-plugin.version}</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <imageName>ingest</imageName>
+                            <mainClass>com.ebremer.halcyon.converters.Ingest</mainClass>
+                            <skipNativeTests>true</skipNativeTests>
+                            <verbose>true</verbose>
+                            <jvmArgs>
+                                <arg>--add-opens=java.base/java.nio=ALL-UNNAMED</arg>
+                                <arg>--enable-preview</arg>
+                            </jvmArgs>
+                            <buildArgs>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>-H:ConfigurationFileDirectories=config</buildArg>
+                                <buildArg>--initialize-at-run-time=org.slf4j</buildArg>
+                                <buildArg>--initialize-at-run-time=org.apache.logging.log4j.core.config.Configurator</buildArg>
+                                <buildArg>--enable-url-protocols=https</buildArg>
+                                <buildArg>-H:+AddAllCharsets</buildArg>
+                                <buildArg>-march=native</buildArg>
+                                <buildArg>-J-Xmx32G</buildArg>
+                                <buildArg>--no-server</buildArg>
+                                <buildArg>--parallelism=32</buildArg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
+            <id>win64</id>
             <build>
                 <plugins>
                     <plugin>
@@ -72,7 +116,6 @@
                                 <buildArg>--enable-url-protocols=https</buildArg>
                                 <buildArg>-H:+AddAllCharsets</buildArg>
                                 <buildArg>--static</buildArg>
-                                <buildArg>--strict-image-heap</buildArg>
                                 <buildArg>-march=native</buildArg>
                                 <buildArg>-J-Xmx32G</buildArg>
                                 <buildArg>--no-server</buildArg>
@@ -84,7 +127,7 @@
             </build>
         </profile>
         <profile>
-            <id>ingestjar</id>
+            <id>jar</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
